Fix(Home): missing background color prop

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -11,6 +11,7 @@
   position: relative;
   height: calc(100 * var(--vh));
   background-image: none;
+  background-color: white;
   /* background-image: url("https://res.cloudinary.com/flowww-dev/image/upload/v1651239770/L%27institut%20d%27Aur%C3%A9/beautiful-blue-eyes_w6ddxh.webp"); */
 }
 
